# eve-online-sde-mcp

./: .gitignore  .mcp.json  .mcpbignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  manifest.json  renovate.json
.claude/: settings.local.json
.claude/epics/eve-sde-mcp/: 10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  epic.md  github-mapping.md
.claude/prds/: eve-sde-mcp.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.out-of-scope/: sde-bump-workflow.md
docs/adr/: 0001-build-router-and-production-chain-split.md
docs/agents/: domain.md
src/: config.rs  download.rs  main.rs  scan.rs  sde_version.rs  store.rs
src/tools/: manufacturing.rs  mod.rs  query.rs  server.rs
tests/fixtures/sde/: _sde.jsonl  blueprints.jsonl  categories.jsonl  dogmaAttributes.jsonl  dogmaEffects.jsonl  factions.jsonl  groups.jsonl  mapConstellations.jsonl  mapRegions.jsonl  mapSolarSystems.jsonl  mapStargates.jsonl  marketGroups.jsonl  npcCorporations.jsonl  npcStations.jsonl  skins.jsonl  typeDogma.jsonl  typeMaterials.jsonl  types.jsonl
