[package]
name = "eve-sde-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.6", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
indicatif = "0.17"
