[package]
name = "eve-sde-mcp"
version = "0.2.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.6", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking"] }
zip = "8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.11"
indicatif = "0.18"
memchr = "2"
directories = "6.0.0"

[dev-dependencies]
tempfile = "3"
rmcp = { version = "1.6", features = ["client", "macros"] }
